crates/tui/tests/storybook/snapshots/app_markdown::text_block_markdown_inline_file_icons.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 80 10
  0  15   2 fg=Rgb { r: 156, g: 66, b: 33 }
  0  17  10 fg=AnsiValue(75)
  0  29   2 fg=Rgb { r: 222, g: 165, b: 132 }
  0  31  14 fg=AnsiValue(75)
  0  47   2 fg=Rgb { r: 237, g: 237, b: 237 }
  0  49   9 fg=AnsiValue(75)
  1   0   2 fg=Rgb { r: 77, g: 90, b: 94 }
  1   2  14 fg=AnsiValue(75)
  6   0   1 fg=AnsiValue(237)
  6   1   1 fg=Rgb { r: 198, g: 198, b: 198 } attrs=bold
  6   2   1 fg=Rgb { r: 175, g: 175, b: 175 } attrs=bold
  6   3   1 fg=Rgb { r: 157, g: 157, b: 157 } attrs=bold
  6   4   1 fg=Rgb { r: 144, g: 144, b: 144 } attrs=bold
  6   5   1 fg=Rgb { r: 140, g: 140, b: 140 } attrs=bold
  6   6   1 fg=Rgb { r: 144, g: 144, b: 144 } attrs=bold
  6   7   1 fg=Rgb { r: 157, g: 157, b: 157 } attrs=bold
  6   8   1 fg=Rgb { r: 175, g: 175, b: 175 } attrs=bold
  6   9   1 fg=Rgb { r: 198, g: 198, b: 198 } attrs=bold
  6  10   1 fg=Rgb { r: 220, g: 220, b: 220 } attrs=bold
  6  11   1 fg=Rgb { r: 238, g: 238, b: 238 } attrs=bold
  6  13  67 fg=AnsiValue(237)
  7   1   1 fg=Black bg=White
  8   0  80 fg=AnsiValue(237)
  9   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
  9  10  62 bg=AnsiValue(233)
  9  72   8 fg=AnsiValue(244) bg=AnsiValue(233)
