crates/tui/tests/storybook/snapshots/app_markdown::text_block_markdown_link.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
See the [docs](https://example.com/docs) or visit
<https://example.com> directly.


─ ✿ working… ────────────────────────────────────────────  ─

────────────────────────────────────────────────────────────
