crates/tui/tests/storybook/snapshots/app_markdown::text_block_markdown_lists.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 344
expression: frame.text()
---
- first item
- second item
  - nested item
1. ordered one
2. ordered two





─ ✿ working… ─────────────────────────────────────

──────────────────────────────────────────────────
 ○ normal                                 1:1 100%
