crates/tui/tests/storybook/snapshots/app_markdown::text_block_markdown_mixed_nested_lists.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 50 14
  0   0   2 attrs=dim
  1   2   3 attrs=dim
  2   2   3 attrs=dim
  3   0   2 attrs=dim
  4   0   3 attrs=dim
  5   3   2 attrs=dim
  6   3   2 attrs=dim
  7   0   3 attrs=dim
 10   0  47 fg=AnsiValue(237)
 10  47   1 fg=AnsiValue(244)
 10  49   1 fg=AnsiValue(237)
 11   1   1 fg=Black bg=White
 12   0  50 fg=AnsiValue(237)
 13   0  50 bg=AnsiValue(233)
