crates/tui/tests/storybook/snapshots/app_markdown::text_block_markdown_nested_code_fence.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
First in rust:

let x = 1;

Then in python:

x = 1
print(x)

Done.




─ ✿ working… ────────────────────────────────────────────  ─

────────────────────────────────────────────────────────────
