crates/tui/tests/storybook/snapshots/app_markdown::text_block_markdown_nested_code_fence.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 345
expression: frame.styles_text()
---
dim: 60 18
  2   0   3 fg=Rgb { r: 102, g: 217, b: 239 } bg=AnsiValue(233)
  2   3   3 fg=Rgb { r: 248, g: 248, b: 242 } bg=AnsiValue(233)
  2   6   1 fg=Rgb { r: 249, g: 38, b: 114 } bg=AnsiValue(233)
  2   7   1 fg=Rgb { r: 248, g: 248, b: 242 } bg=AnsiValue(233)
  2   8   1 fg=Rgb { r: 190, g: 132, b: 255 } bg=AnsiValue(233)
  2   9   1 fg=Rgb { r: 248, g: 248, b: 242 } bg=AnsiValue(233)
  2  10  49 bg=AnsiValue(233)
  6   0   2 fg=Rgb { r: 248, g: 248, b: 242 } bg=AnsiValue(233)
  6   2   1 fg=Rgb { r: 249, g: 38, b: 114 } bg=AnsiValue(233)
  6   3   1 fg=Rgb { r: 248, g: 248, b: 242 } bg=AnsiValue(233)
  6   4   1 fg=Rgb { r: 190, g: 132, b: 255 } bg=AnsiValue(233)
  6   5  54 bg=AnsiValue(233)
  7   0   5 fg=Rgb { r: 102, g: 217, b: 239 } bg=AnsiValue(233)
  7   5   3 fg=Rgb { r: 248, g: 248, b: 242 } bg=AnsiValue(233)
  7   8  51 bg=AnsiValue(233)
 14   1   1 fg=Rgb { r: 198, g: 198, b: 198 } attrs=bold
 14   2   1 fg=Rgb { r: 175, g: 175, b: 175 } attrs=bold
 14   3   1 fg=Rgb { r: 157, g: 157, b: 157 } attrs=bold
 14   4   1 fg=Rgb { r: 144, g: 144, b: 144 } attrs=bold
 14   5   1 fg=Rgb { r: 140, g: 140, b: 140 } attrs=bold
 14   6   1 fg=Rgb { r: 144, g: 144, b: 144 } attrs=bold
 14   7   1 fg=Rgb { r: 157, g: 157, b: 157 } attrs=bold
 14   8   1 fg=Rgb { r: 175, g: 175, b: 175 } attrs=bold
 14   9   1 fg=Rgb { r: 198, g: 198, b: 198 } attrs=bold
 14  10   1 fg=Rgb { r: 220, g: 220, b: 220 } attrs=bold
 14  11   1 fg=Rgb { r: 238, g: 238, b: 238 } attrs=bold
 15   1   1 fg=Black bg=White
 17   0  10 fg=AnsiValue(244) bg=AnsiValue(233)
 17  10  50 bg=AnsiValue(233)
