crates/tui/tests/storybook/snapshots/app_markdown::text_block_markdown_soft_wrap.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
This is one long paragraph that has to wrap
across several visible rows because the
viewport is narrower than the sentence and we
want to exercise the soft-wrap path through
render_paragraph.

─ ✿ working… ──────────────────────────────────  ─

──────────────────────────────────────────────────
